// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of Contact Map. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="Contact Map"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <PredictedContactMapClass
      addCandidateResidues={[Function]}
      addHoveredResidues={[Function]}
      addLockedResiduePair={[Function]}
      candidateResidues={Array []}
      clearAllResidues={[Function]}
      correctColor="#ff0000"
      data={
        Object {
          "couplingScores": CouplingContainer {
            "colCounter": 0,
            "contacts": Array [],
            "getCouplingScore": [Function],
            "includes": [Function],
            "rowCounter": 0,
            "totalStoredContacts": 0,
          },
          "pdbData": ChellPDB {
            "NGL_C_ALPHA_INDEX": "CA|C",
            "nglData": Xg {
              "_ap": ag {
                "atomMap": Rg {
                  "dict": Object {},
                  "list": Array [],
                  "structure": [Circular],
                },
                "atomStore": e {
                  "_fields": Array [
                    Array [
                      "residueIndex",
                      1,
                      "uint32",
                    ],
                    Array [
                      "atomTypeId",
                      1,
                      "uint16",
                    ],
                    Array [
                      "x",
                      1,
                      "float32",
                    ],
                    Array [
                      "y",
                      1,
                      "float32",
                    ],
                    Array [
                      "z",
                      1,
                      "float32",
                    ],
                    Array [
                      "serial",
                      1,
                      "int32",
                    ],
                    Array [
                      "bfactor",
                      1,
                      "float32",
                    ],
                    Array [
                      "altloc",
                      1,
                      "uint8",
                    ],
                    Array [
                      "occupancy",
                      1,
                      "float32",
                    ],
                  ],
                  "altloc": Uint8Array [],
                  "atomTypeId": Uint16Array [],
                  "bfactor": Float32Array [],
                  "count": 0,
                  "length": 0,
                  "occupancy": Float32Array [],
                  "residueIndex": Uint32Array [],
                  "serial": Int32Array [],
                  "x": Float32Array [],
                  "y": Float32Array [],
                  "z": Float32Array [],
                },
                "chainStore": e {
                  "_fields": Array [
                    Array [
                      "entityIndex",
                      1,
                      "uint16",
                    ],
                    Array [
                      "modelIndex",
                      1,
                      "uint16",
                    ],
                    Array [
                      "residueOffset",
                      1,
                      "uint32",
                    ],
                    Array [
                      "residueCount",
                      1,
                      "uint32",
                    ],
                    Array [
                      "chainname",
                      4,
                      "uint8",
                    ],
                    Array [
                      "chainid",
                      4,
                      "uint8",
                    ],
                  ],
                  "chainid": Uint8Array [],
                  "chainname": Uint8Array [],
                  "count": 0,
                  "entityIndex": Uint16Array [],
                  "length": 0,
                  "modelIndex": Uint16Array [],
                  "residueCount": Uint32Array [],
                  "residueOffset": Uint32Array [],
                },
                "index": 0,
                "residueMap": Bg {
                  "dict": Object {},
                  "list": Array [],
                  "structure": [Circular],
                },
                "residueStore": e {
                  "_fields": Array [
                    Array [
                      "chainIndex",
                      1,
                      "uint32",
                    ],
                    Array [
                      "atomOffset",
                      1,
                      "uint32",
                    ],
                    Array [
                      "atomCount",
                      1,
                      "uint16",
                    ],
                    Array [
                      "residueTypeId",
                      1,
                      "uint16",
                    ],
                    Array [
                      "resno",
                      1,
                      "int32",
                    ],
                    Array [
                      "sstruc",
                      1,
                      "uint8",
                    ],
                    Array [
                      "inscode",
                      1,
                      "uint8",
                    ],
                  ],
                  "atomCount": Uint16Array [],
                  "atomOffset": Uint32Array [],
                  "chainIndex": Uint32Array [],
                  "count": 0,
                  "inscode": Uint8Array [],
                  "length": 0,
                  "residueTypeId": Uint16Array [],
                  "resno": Int32Array [],
                  "sstruc": Uint8Array [],
                },
                "structure": [Circular],
              },
              "_bp": Ng {
                "_ap1": ag {
                  "atomMap": Rg {
                    "dict": Object {},
                    "list": Array [],
                    "structure": [Circular],
                  },
                  "atomStore": e {
                    "_fields": Array [
                      Array [
                        "residueIndex",
                        1,
                        "uint32",
                      ],
                      Array [
                        "atomTypeId",
                        1,
                        "uint16",
                      ],
                      Array [
                        "x",
                        1,
                        "float32",
                      ],
                      Array [
                        "y",
                        1,
                        "float32",
                      ],
                      Array [
                        "z",
                        1,
                        "float32",
                      ],
                      Array [
                        "serial",
                        1,
                        "int32",
                      ],
                      Array [
                        "bfactor",
                        1,
                        "float32",
                      ],
                      Array [
                        "altloc",
                        1,
                        "uint8",
                      ],
                      Array [
                        "occupancy",
                        1,
                        "float32",
                      ],
                    ],
                    "altloc": Uint8Array [],
                    "atomTypeId": Uint16Array [],
                    "bfactor": Float32Array [],
                    "count": 0,
                    "length": 0,
                    "occupancy": Float32Array [],
                    "residueIndex": Uint32Array [],
                    "serial": Int32Array [],
                    "x": Float32Array [],
                    "y": Float32Array [],
                    "z": Float32Array [],
                  },
                  "chainStore": e {
                    "_fields": Array [
                      Array [
                        "entityIndex",
                        1,
                        "uint16",
                      ],
                      Array [
                        "modelIndex",
                        1,
                        "uint16",
                      ],
                      Array [
                        "residueOffset",
                        1,
                        "uint32",
                      ],
                      Array [
                        "residueCount",
                        1,
                        "uint32",
                      ],
                      Array [
                        "chainname",
                        4,
                        "uint8",
                      ],
                      Array [
                        "chainid",
                        4,
                        "uint8",
                      ],
                    ],
                    "chainid": Uint8Array [],
                    "chainname": Uint8Array [],
                    "count": 0,
                    "entityIndex": Uint16Array [],
                    "length": 0,
                    "modelIndex": Uint16Array [],
                    "residueCount": Uint32Array [],
                    "residueOffset": Uint32Array [],
                  },
                  "index": 0,
                  "residueMap": Bg {
                    "dict": Object {},
                    "list": Array [],
                    "structure": [Circular],
                  },
                  "residueStore": e {
                    "_fields": Array [
                      Array [
                        "chainIndex",
                        1,
                        "uint32",
                      ],
                      Array [
                        "atomOffset",
                        1,
                        "uint32",
                      ],
                      Array [
                        "atomCount",
                        1,
                        "uint16",
                      ],
                      Array [
                        "residueTypeId",
                        1,
                        "uint16",
                      ],
                      Array [
                        "resno",
                        1,
                        "int32",
                      ],
                      Array [
                        "sstruc",
                        1,
                        "uint8",
                      ],
                      Array [
                        "inscode",
                        1,
                        "uint8",
                      ],
                    ],
                    "atomCount": Uint16Array [],
                    "atomOffset": Uint32Array [],
                    "chainIndex": Uint32Array [],
                    "count": 0,
                    "inscode": Uint8Array [],
                    "length": 0,
                    "residueTypeId": Uint16Array [],
                    "resno": Int32Array [],
                    "sstruc": Uint8Array [],
                  },
                  "structure": [Circular],
                },
                "_ap2": ag {
                  "atomMap": Rg {
                    "dict": Object {},
                    "list": Array [],
                    "structure": [Circular],
                  },
                  "atomStore": e {
                    "_fields": Array [
                      Array [
                        "residueIndex",
                        1,
                        "uint32",
                      ],
                      Array [
                        "atomTypeId",
                        1,
                        "uint16",
                      ],
                      Array [
                        "x",
                        1,
                        "float32",
                      ],
                      Array [
                        "y",
                        1,
                        "float32",
                      ],
                      Array [
                        "z",
                        1,
                        "float32",
                      ],
                      Array [
                        "serial",
                        1,
                        "int32",
                      ],
                      Array [
                        "bfactor",
                        1,
                        "float32",
                      ],
                      Array [
                        "altloc",
                        1,
                        "uint8",
                      ],
                      Array [
                        "occupancy",
                        1,
                        "float32",
                      ],
                    ],
                    "altloc": Uint8Array [],
                    "atomTypeId": Uint16Array [],
                    "bfactor": Float32Array [],
                    "count": 0,
                    "length": 0,
                    "occupancy": Float32Array [],
                    "residueIndex": Uint32Array [],
                    "serial": Int32Array [],
                    "x": Float32Array [],
                    "y": Float32Array [],
                    "z": Float32Array [],
                  },
                  "chainStore": e {
                    "_fields": Array [
                      Array [
                        "entityIndex",
                        1,
                        "uint16",
                      ],
                      Array [
                        "modelIndex",
                        1,
                        "uint16",
                      ],
                      Array [
                        "residueOffset",
                        1,
                        "uint32",
                      ],
                      Array [
                        "residueCount",
                        1,
                        "uint32",
                      ],
                      Array [
                        "chainname",
                        4,
                        "uint8",
                      ],
                      Array [
                        "chainid",
                        4,
                        "uint8",
                      ],
                    ],
                    "chainid": Uint8Array [],
                    "chainname": Uint8Array [],
                    "count": 0,
                    "entityIndex": Uint16Array [],
                    "length": 0,
                    "modelIndex": Uint16Array [],
                    "residueCount": Uint32Array [],
                    "residueOffset": Uint32Array [],
                  },
                  "index": 0,
                  "residueMap": Bg {
                    "dict": Object {},
                    "list": Array [],
                    "structure": [Circular],
                  },
                  "residueStore": e {
                    "_fields": Array [
                      Array [
                        "chainIndex",
                        1,
                        "uint32",
                      ],
                      Array [
                        "atomOffset",
                        1,
                        "uint32",
                      ],
                      Array [
                        "atomCount",
                        1,
                        "uint16",
                      ],
                      Array [
                        "residueTypeId",
                        1,
                        "uint16",
                      ],
                      Array [
                        "resno",
                        1,
                        "int32",
                      ],
                      Array [
                        "sstruc",
                        1,
                        "uint8",
                      ],
                      Array [
                        "inscode",
                        1,
                        "uint8",
                      ],
                    ],
                    "atomCount": Uint16Array [],
                    "atomOffset": Uint32Array [],
                    "chainIndex": Uint32Array [],
                    "count": 0,
                    "inscode": Uint8Array [],
                    "length": 0,
                    "residueTypeId": Uint16Array [],
                    "resno": Int32Array [],
                    "sstruc": Uint8Array [],
                  },
                  "structure": [Circular],
                },
                "_ap3": ag {
                  "atomMap": Rg {
                    "dict": Object {},
                    "list": Array [],
                    "structure": [Circular],
                  },
                  "atomStore": e {
                    "_fields": Array [
                      Array [
                        "residueIndex",
                        1,
                        "uint32",
                      ],
                      Array [
                        "atomTypeId",
                        1,
                        "uint16",
                      ],
                      Array [
                        "x",
                        1,
                        "float32",
                      ],
                      Array [
                        "y",
                        1,
                        "float32",
                      ],
                      Array [
                        "z",
                        1,
                        "float32",
                      ],
                      Array [
                        "serial",
                        1,
                        "int32",
                      ],
                      Array [
                        "bfactor",
                        1,
                        "float32",
                      ],
                      Array [
                        "altloc",
                        1,
                        "uint8",
                      ],
                      Array [
                        "occupancy",
                        1,
                        "float32",
                      ],
                    ],
                    "altloc": Uint8Array [],
                    "atomTypeId": Uint16Array [],
                    "bfactor": Float32Array [],
                    "count": 0,
                    "length": 0,
                    "occupancy": Float32Array [],
                    "residueIndex": Uint32Array [],
                    "serial": Int32Array [],
                    "x": Float32Array [],
                    "y": Float32Array [],
                    "z": Float32Array [],
                  },
                  "chainStore": e {
                    "_fields": Array [
                      Array [
                        "entityIndex",
                        1,
                        "uint16",
                      ],
                      Array [
                        "modelIndex",
                        1,
                        "uint16",
                      ],
                      Array [
                        "residueOffset",
                        1,
                        "uint32",
                      ],
                      Array [
                        "residueCount",
                        1,
                        "uint32",
                      ],
                      Array [
                        "chainname",
                        4,
                        "uint8",
                      ],
                      Array [
                        "chainid",
                        4,
                        "uint8",
                      ],
                    ],
                    "chainid": Uint8Array [],
                    "chainname": Uint8Array [],
                    "count": 0,
                    "entityIndex": Uint16Array [],
                    "length": 0,
                    "modelIndex": Uint16Array [],
                    "residueCount": Uint32Array [],
                    "residueOffset": Uint32Array [],
                  },
                  "index": 0,
                  "residueMap": Bg {
                    "dict": Object {},
                    "list": Array [],
                    "structure": [Circular],
                  },
                  "residueStore": e {
                    "_fields": Array [
                      Array [
                        "chainIndex",
                        1,
                        "uint32",
                      ],
                      Array [
                        "atomOffset",
                        1,
                        "uint32",
                      ],
                      Array [
                        "atomCount",
                        1,
                        "uint16",
                      ],
                      Array [
                        "residueTypeId",
                        1,
                        "uint16",
                      ],
                      Array [
                        "resno",
                        1,
                        "int32",
                      ],
                      Array [
                        "sstruc",
                        1,
                        "uint8",
                      ],
                      Array [
                        "inscode",
                        1,
                        "uint8",
                      ],
                    ],
                    "atomCount": Uint16Array [],
                    "atomOffset": Uint32Array [],
                    "chainIndex": Uint32Array [],
                    "count": 0,
                    "inscode": Uint8Array [],
                    "length": 0,
                    "residueTypeId": Uint16Array [],
                    "resno": Int32Array [],
                    "sstruc": Uint8Array [],
                  },
                  "structure": [Circular],
                },
                "_v12": a {
                  "x": 0,
                  "y": 0,
                  "z": 0,
                },
                "_v13": a {
                  "x": 0,
                  "y": 0,
                  "z": 0,
                },
                "bondStore": e {
                  "_fields": Array [
                    Array [
                      "atomIndex1",
                      1,
                      "int32",
                    ],
                    Array [
                      "atomIndex2",
                      1,
                      "int32",
                    ],
                    Array [
                      "bondOrder",
                      1,
                      "int8",
                    ],
                  ],
                  "atomIndex1": Int32Array [],
                  "atomIndex2": Int32Array [],
                  "bondOrder": Int8Array [],
                  "count": 0,
                  "length": 0,
                },
                "index": 0,
                "structure": [Circular],
              },
              "_cp": Vg {
                "chainStore": e {
                  "_fields": Array [
                    Array [
                      "entityIndex",
                      1,
                      "uint16",
                    ],
                    Array [
                      "modelIndex",
                      1,
                      "uint16",
                    ],
                    Array [
                      "residueOffset",
                      1,
                      "uint32",
                    ],
                    Array [
                      "residueCount",
                      1,
                      "uint32",
                    ],
                    Array [
                      "chainname",
                      4,
                      "uint8",
                    ],
                    Array [
                      "chainid",
                      4,
                      "uint8",
                    ],
                  ],
                  "chainid": Uint8Array [],
                  "chainname": Uint8Array [],
                  "count": 0,
                  "entityIndex": Uint16Array [],
                  "length": 0,
                  "modelIndex": Uint16Array [],
                  "residueCount": Uint32Array [],
                  "residueOffset": Uint32Array [],
                },
                "index": 0,
                "residueStore": e {
                  "_fields": Array [
                    Array [
                      "chainIndex",
                      1,
                      "uint32",
                    ],
                    Array [
                      "atomOffset",
                      1,
                      "uint32",
                    ],
                    Array [
                      "atomCount",
                      1,
                      "uint16",
                    ],
                    Array [
                      "residueTypeId",
                      1,
                      "uint16",
                    ],
                    Array [
                      "resno",
                      1,
                      "int32",
                    ],
                    Array [
                      "sstruc",
                      1,
                      "uint8",
                    ],
                    Array [
                      "inscode",
                      1,
                      "uint8",
                    ],
                  ],
                  "atomCount": Uint16Array [],
                  "atomOffset": Uint32Array [],
                  "chainIndex": Uint32Array [],
                  "count": 0,
                  "inscode": Uint8Array [],
                  "length": 0,
                  "residueTypeId": Uint16Array [],
                  "resno": Int32Array [],
                  "sstruc": Uint8Array [],
                },
                "structure": [Circular],
              },
              "_rp": zg {
                "atomMap": Rg {
                  "dict": Object {},
                  "list": Array [],
                  "structure": [Circular],
                },
                "atomStore": e {
                  "_fields": Array [
                    Array [
                      "residueIndex",
                      1,
                      "uint32",
                    ],
                    Array [
                      "atomTypeId",
                      1,
                      "uint16",
                    ],
                    Array [
                      "x",
                      1,
                      "float32",
                    ],
                    Array [
                      "y",
                      1,
                      "float32",
                    ],
                    Array [
                      "z",
                      1,
                      "float32",
                    ],
                    Array [
                      "serial",
                      1,
                      "int32",
                    ],
                    Array [
                      "bfactor",
                      1,
                      "float32",
                    ],
                    Array [
                      "altloc",
                      1,
                      "uint8",
                    ],
                    Array [
                      "occupancy",
                      1,
                      "float32",
                    ],
                  ],
                  "altloc": Uint8Array [],
                  "atomTypeId": Uint16Array [],
                  "bfactor": Float32Array [],
                  "count": 0,
                  "length": 0,
                  "occupancy": Float32Array [],
                  "residueIndex": Uint32Array [],
                  "serial": Int32Array [],
                  "x": Float32Array [],
                  "y": Float32Array [],
                  "z": Float32Array [],
                },
                "chainStore": e {
                  "_fields": Array [
                    Array [
                      "entityIndex",
                      1,
                      "uint16",
                    ],
                    Array [
                      "modelIndex",
                      1,
                      "uint16",
                    ],
                    Array [
                      "residueOffset",
                      1,
                      "uint32",
                    ],
                    Array [
                      "residueCount",
                      1,
                      "uint32",
                    ],
                    Array [
                      "chainname",
                      4,
                      "uint8",
                    ],
                    Array [
                      "chainid",
                      4,
                      "uint8",
                    ],
                  ],
                  "chainid": Uint8Array [],
                  "chainname": Uint8Array [],
                  "count": 0,
                  "entityIndex": Uint16Array [],
                  "length": 0,
                  "modelIndex": Uint16Array [],
                  "residueCount": Uint32Array [],
                  "residueOffset": Uint32Array [],
                },
                "index": 0,
                "residueMap": Bg {
                  "dict": Object {},
                  "list": Array [],
                  "structure": [Circular],
                },
                "residueStore": e {
                  "_fields": Array [
                    Array [
                      "chainIndex",
                      1,
                      "uint32",
                    ],
                    Array [
                      "atomOffset",
                      1,
                      "uint32",
                    ],
                    Array [
                      "atomCount",
                      1,
                      "uint16",
                    ],
                    Array [
                      "residueTypeId",
                      1,
                      "uint16",
                    ],
                    Array [
                      "resno",
                      1,
                      "int32",
                    ],
                    Array [
                      "sstruc",
                      1,
                      "uint8",
                    ],
                    Array [
                      "inscode",
                      1,
                      "uint8",
                    ],
                  ],
                  "atomCount": Uint16Array [],
                  "atomOffset": Uint32Array [],
                  "chainIndex": Uint32Array [],
                  "count": 0,
                  "inscode": Uint8Array [],
                  "length": 0,
                  "residueTypeId": Uint16Array [],
                  "resno": Int32Array [],
                  "sstruc": Uint8Array [],
                },
                "structure": [Circular],
              },
              "atomMap": Rg {
                "dict": Object {},
                "list": Array [],
                "structure": [Circular],
              },
              "atomSet": undefined,
              "atomSetCache": Object {},
              "atomSetDict": Object {},
              "atomStore": e {
                "_fields": Array [
                  Array [
                    "residueIndex",
                    1,
                    "uint32",
                  ],
                  Array [
                    "atomTypeId",
                    1,
                    "uint16",
                  ],
                  Array [
                    "x",
                    1,
                    "float32",
                  ],
                  Array [
                    "y",
                    1,
                    "float32",
                  ],
                  Array [
                    "z",
                    1,
                    "float32",
                  ],
                  Array [
                    "serial",
                    1,
                    "int32",
                  ],
                  Array [
                    "bfactor",
                    1,
                    "float32",
                  ],
                  Array [
                    "altloc",
                    1,
                    "uint8",
                  ],
                  Array [
                    "occupancy",
                    1,
                    "float32",
                  ],
                ],
                "altloc": Uint8Array [],
                "atomTypeId": Uint16Array [],
                "bfactor": Float32Array [],
                "count": 0,
                "length": 0,
                "occupancy": Float32Array [],
                "residueIndex": Uint32Array [],
                "serial": Int32Array [],
                "x": Float32Array [],
                "y": Float32Array [],
                "z": Float32Array [],
              },
              "backboneBondStore": e {
                "_fields": Array [
                  Array [
                    "atomIndex1",
                    1,
                    "int32",
                  ],
                  Array [
                    "atomIndex2",
                    1,
                    "int32",
                  ],
                  Array [
                    "bondOrder",
                    1,
                    "int8",
                  ],
                ],
                "atomIndex1": Int32Array [],
                "atomIndex2": Int32Array [],
                "bondOrder": Int8Array [],
                "count": 0,
                "length": 0,
              },
              "biomolDict": Object {},
              "bondHash": undefined,
              "bondSet": undefined,
              "bondStore": e {
                "_fields": Array [
                  Array [
                    "atomIndex1",
                    1,
                    "int32",
                  ],
                  Array [
                    "atomIndex2",
                    1,
                    "int32",
                  ],
                  Array [
                    "bondOrder",
                    1,
                    "int8",
                  ],
                ],
                "atomIndex1": Int32Array [],
                "atomIndex2": Int32Array [],
                "bondOrder": Int8Array [],
                "count": 0,
                "length": 0,
              },
              "boundingBox": tt {
                "max": a {
                  "x": -Infinity,
                  "y": -Infinity,
                  "z": -Infinity,
                },
                "min": a {
                  "x": Infinity,
                  "y": Infinity,
                  "z": Infinity,
                },
              },
              "boxes": Array [],
              "center": a {
                "x": 0,
                "y": 0,
                "z": 0,
              },
              "chainStore": e {
                "_fields": Array [
                  Array [
                    "entityIndex",
                    1,
                    "uint16",
                  ],
                  Array [
                    "modelIndex",
                    1,
                    "uint16",
                  ],
                  Array [
                    "residueOffset",
                    1,
                    "uint32",
                  ],
                  Array [
                    "residueCount",
                    1,
                    "uint32",
                  ],
                  Array [
                    "chainname",
                    4,
                    "uint8",
                  ],
                  Array [
                    "chainid",
                    4,
                    "uint8",
                  ],
                ],
                "chainid": Uint8Array [],
                "chainname": Uint8Array [],
                "count": 0,
                "entityIndex": Uint16Array [],
                "length": 0,
                "modelIndex": Uint16Array [],
                "residueCount": Uint32Array [],
                "residueOffset": Uint32Array [],
              },
              "data": Object {
                "@spatialLookup": undefined,
                "@valenceModel": undefined,
                "structure": [Circular],
              },
              "entityList": Array [],
              "extraData": Object {},
              "frames": Array [],
              "header": Object {},
              "id": "",
              "modelStore": e {
                "_fields": Array [
                  Array [
                    "chainOffset",
                    1,
                    "uint32",
                  ],
                  Array [
                    "chainCount",
                    1,
                    "uint32",
                  ],
                ],
                "chainCount": Uint32Array [],
                "chainOffset": Uint32Array [],
                "count": 0,
                "length": 0,
              },
              "name": "",
              "path": "",
              "residueMap": Bg {
                "dict": Object {},
                "list": Array [],
                "structure": [Circular],
              },
              "residueStore": e {
                "_fields": Array [
                  Array [
                    "chainIndex",
                    1,
                    "uint32",
                  ],
                  Array [
                    "atomOffset",
                    1,
                    "uint32",
                  ],
                  Array [
                    "atomCount",
                    1,
                    "uint16",
                  ],
                  Array [
                    "residueTypeId",
                    1,
                    "uint16",
                  ],
                  Array [
                    "resno",
                    1,
                    "int32",
                  ],
                  Array [
                    "sstruc",
                    1,
                    "uint8",
                  ],
                  Array [
                    "inscode",
                    1,
                    "uint8",
                  ],
                ],
                "atomCount": Uint16Array [],
                "atomOffset": Uint32Array [],
                "chainIndex": Uint32Array [],
                "count": 0,
                "inscode": Uint8Array [],
                "length": 0,
                "residueTypeId": Uint16Array [],
                "resno": Int32Array [],
                "sstruc": Uint8Array [],
              },
              "rungBondStore": e {
                "_fields": Array [
                  Array [
                    "atomIndex1",
                    1,
                    "int32",
                  ],
                  Array [
                    "atomIndex2",
                    1,
                    "int32",
                  ],
                  Array [
                    "bondOrder",
                    1,
                    "int8",
                  ],
                ],
                "atomIndex1": Int32Array [],
                "atomIndex2": Int32Array [],
                "bondOrder": Int8Array [],
                "count": 0,
                "length": 0,
              },
              "signals": Object {
                "refreshed": Object {
                  "_bindings": Array [],
                  "_prevParams": null,
                  "dispatch": [Function],
                },
              },
              "spatialHash": undefined,
              "title": "",
              "unitcell": undefined,
              "validation": undefined,
            },
          },
          "secondaryStructures": Array [],
        }
      }
      height={420}
      hoveredResidues={Array []}
      incorrectColor="#000000"
      lockedResiduePairs={Map {}}
      observedColor="#0000ff"
      padding={15}
      removeAllLockedResiduePairs={[Function]}
      removeCandidateResidues={[Function]}
      removeHoveredResidues={[Function]}
      removeLockedResiduePair={[Function]}
      toggleLockedResiduePair={[Function]}
      width={420}
    />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of NGL. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="NGL"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <NGLComponent
      height={420}
      padding={15}
      width={420}
    />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of Spring. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="Spring"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <SpringComponent
      height={420}
      padding={15}
      width={420}
    />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of T-SNE. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="T-SNE"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <TComponentClass
      data={
        Array [
          Array [
            0,
          ],
          Array [
            0,
          ],
        ]
      }
      height={420}
      padding={15}
      pointColor="#000000"
      width={420}
    />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given no initial visualization. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="T-SNE"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <TComponentClass
      data={
        Array [
          Array [
            0,
          ],
          Array [
            0,
          ],
        ]
      }
      height={420}
      padding={15}
      pointColor="#000000"
      width={420}
    />
  </Card>
</div>
`;
